Added one-one relationship between Items and SeialNumber

--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -8,6 +8,7 @@
 		<tr>
 			<th>Name</th>
 			<th>Price</th>
+			<th>Serial Number</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -16,11 +17,12 @@
 			<tr>
 				<td>@item.Name</td>
 				<td>@item.Price.ToString("N2")</td>
+				<td>@item.SerialNumber?.Name</td>
 				<td>
 					<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
 					<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
 				</td>
 			</tr>
-		})
+		}
 	</tbody>
 </table>
