--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -9,6 +9,8 @@
 			<th>Name</th>
 			<th>Price</th>
 			<th>Serial Number</th>
+			<th>Category</th>
+			<th>Clients</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -18,6 +20,13 @@
 				<td>@item.Name</td>
 				<td>@item.Price.ToString("N2")</td>
 				<td>@item.SerialNumber?.Name</td>
+				<td>@item.Category?.Name</td>
+				<td>
+					@foreach (var client in item.ItemClients)
+					{
+						<p>@client.Client.Name</p>
+					}
+				</td>
 				<td>
 					<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
 					<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
